--- a/docs/ssn/064/ssn64.tex
+++ b/docs/ssn/064/ssn64.tex
@@ -1,27 +1,17 @@
-\documentclass[twoside,11pt]{article}
-
-% ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
-% ? End of specify used packages
-
-\pagestyle{myheadings}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
-% ? Document identification
-% Fixed part
-\newcommand{\stardoccategory}  {Starlink System Note}
-\newcommand{\stardocinitials}  {SSN}
-\newcommand{\stardocsource}    {ssn\stardocnumber}
-\newcommand{\stardoccopyright}
+% Document identification
+\stardoccategory    {Starlink System Note}
+\stardocinitials    {SSN}
+\stardocsource      {ssn\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2002 Council for the Central Laboratory of the Research Councils}
-
-% Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {64.5}
-\newcommand{\stardocauthors}   {A J Chipperfield}
-\newcommand{\stardocdate}      {3 September 2002}
-\newcommand{\stardoctitle}     {ADAM --- Organization of Application Packages}
-\newcommand{\stardocabstract}  {
+\stardocnumber      {64.5}
+\stardocauthors     {A J Chipperfield}
+\stardocdate        {3 September 2002}
+\stardoctitle       {ADAM --- Organization of Application Packages}
+\stardocabstract  {
 This document explains the standard way in which
 \xref{ADAM}{sg4}{} applications packages
 are set up to run on Starlink machines. It covers the systems permitting
@@ -31,263 +21,16 @@ Language (\xref{ICL}{sg5}{}) on Unix.
 This document is relevant to applications programmers, the Starlink Software
 Librarian and Site Managers.
 }
-% ? End of document identification
-% -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     ssn.tex
-%
-%  Purpose:
-%     Template for Starlink System Note (SSN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
+\stardocname  {\stardocinitials /\stardocnumber}
 
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\HTMLcode}[2][]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
+\providecommand{\dash}{--}
 % -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
 
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document-specific \newcommand or \newenvironment commands.
-\newcommand{\dash}{--}
-\begin{htmlonly}
-\renewcommand{\dash}{-}
-\end{htmlonly}
-% ? End of document-specific commands
-% -----------------------------------------------------------------------------
-%  Title Page.
-%  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Large\textbf{\stardoctitle}}
-   \end{center}
-   \vspace{5mm}
 
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-  \newpage
-  \vspace*{\fill}
-  \stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-\newpage
-\begin{latexonly}
-  \setlength{\parskip}{0mm}
-  \tableofcontents
-  \setlength{\parskip}{\medskipamount}
-  \markboth{\stardocname}{\stardocname}
-\end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
-
-% ? Main text
 \section{\xlabel{introduction}Introduction}
 This document explains the standard way in which
 \xref{ADAM}{sg4}{} applications packages
@@ -416,8 +159,7 @@ Command File which is a file containing ICL commands to:
 \end{enumerate}
 For example, the Package Definition Command File for KAPPA on Unix
 could be something like:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 { KAPPA - Package Definition Command File}
 
 { Re-define the top-level help topic
@@ -436,8 +178,8 @@ PRINT
 PRINT  " --    Initialised for KAPPA    --"
 PRINT  " -- Version 0.8-SU, 1993 January --"
 PRINT
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+
 
 The Package Definition Command File is controlled by the Package Administrator
 and should be installed in \textit{package}\_DIR.
@@ -455,9 +197,9 @@ Software Librarian.
 The top-level topic  will give a list, with a single line
 description, of all the \textit{standard} and \textit{option} packages and will be
 displayed if the user types:
-\begin{quote} \begin{verbatim}
+\begin{terminalv}
 ICL> HELP PACKAGES
-\end{verbatim} \end{quote}
+\end{terminalv}
 The second level will be subtopics for the individual packages.
 Each subtopic will give a brief description of the package and describe how
 to start using it. Before any packages have been started up by the user, the
@@ -508,16 +250,16 @@ exists and, if it does,
 
 For example, for KAPPA (a \textit{standard} package), on Unix it will contain:
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 {  Definitions for KAPPA }
 DEFHELP KAPPA $ADAM_PACKAGES KAPPA
 DEFSTRING KAPPA LOAD $KAPPA_DIR/kappa
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 
 For CCDPACK (an \textit{option} package), it contains:
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 {  CCDPACK  }
 DEFHELP CCDPACK $ADAM_PACKAGES CCDPACK
 IF FILE_EXISTS("$CCDPACK_DIR/ccdpack.icl")
@@ -525,7 +267,7 @@ IF FILE_EXISTS("$CCDPACK_DIR/ccdpack.icl")
 ELSE
   DEFSTRING CCDPACK NOTINSTALLED CCDPACK
 ENDIF
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 Where NOTINSTALLED is a procedure which politely tells the user that the
 package is not available.
@@ -585,7 +327,7 @@ by means of this scheme. It does not pretend to be an exact copy of what you
 would see \dash\ in particular the help text is probably out of date.
 \small
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % icl
 
 ICL (UNIX) Version 3.0  04/08/94
@@ -729,7 +471,7 @@ ICL> ASTERIX
 
 ICL> EXIT
 %
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 \normalsize
 
@@ -761,19 +503,21 @@ and help topics to be used when running the package from ICL.
 information about the package.
 \end{description}
 
-\begin{thebibliography}{9}
-\bibitem{icl} J A Bailey, \textit{ICL --- The New ADAM Command Language - Users
-Guide}, Joint Astronomy Centre.
-\bibitem{kappa} M J Currie, \textit{KAPPA --- Kernel Application Package},
-Starlink User Note 95.
-\bibitem{sgp20} M D Lawden, \textit{Starlink Software Management}, Starlink
-General Paper 20.
-\bibitem{sun144} A J Chipperfield, \textit{ADAM --- Unix Version},
-Starlink User Note 144.
+\begin{thebibliography}{99}
+\bibitem{icl}J A Bailey, \textit{ICL --- The New ADAM Command Language - Users Guide}, Joint Astronomy Centre.
+
+\bibitem{kappa} M J Currie, \textit{KAPPA --- Kernel Application Package}, Starlink User Note 95.
+
+\bibitem{sgp20}M D Lawden, \textit{Starlink Software Management}, Starlink General Paper 20.
+
+\bibitem{sun144}{A J Chipperfield, \textit{ADAM --- Unix Version}, Starlink User Note 144.}
+
 \bibitem{sun124} P T Wallace, \textit{HELP --- Interactive Help System}
 Starlink User Note 124.
+
 \bibitem{ifls} A J Chipperfield, \textit{ADAM --- Interface File Reference Manual},
 Starlink User Note 115.
+
 \bibitem{ssn44} A J Chipperfield, \textit{ADAM --- Installation Guide}, Starlink
 System Note 44.
 \end{thebibliography}
