docs: Fix some xref entries

--- a/docs/sgp/004/sgp4.tex
+++ b/docs/sgp/004/sgp4.tex
@@ -94,7 +94,7 @@ Chapter 18.
 The advice which follows is grouped into five sections concerning
 Starlink naming conventions, programming advice, program design,
 machine independence, and preprocessor advice respectively.  The reader is
-referred to \xref{SGP/16}{sgp16} for general advice on Starlink coding standards.
+referred to \xref{SGP/16}{sgp16}{} for general advice on Starlink coding standards.
 
 \subsection{Starlink naming conventions}
 
@@ -671,7 +671,7 @@ on some platforms. Use ANSI C Standard or POSIX functions.
 
 \srule{Use the Starlink machine-independent macros for Fortran-to-C
 interfaces.}
-These are documented in \xref{SGP/5}{sgp5}.
+These are documented in \xref{SGP/5}{sgp5}{}.
 
 \subsection{Preprocessor advice}
 
